--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity android:name=".register.RegisterActivity" />
 
-        <activity android:name=".MainActivity" />
+        <activity android:name=".mainpage.MainActivity" />
+        <activity android:name=".scanner.ScannerActivity" />
 
     </application>
 
