--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,17 +18,22 @@
 
         <activity
             android:name=".login.LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".register.RegisterActivity" />
 
-        <activity android:name=".mainpage.MainActivity" />
-        <activity android:name=".scanner.ScannerActivity" />
+        <activity android:name=".register.RegisterActivity"
+            android:screenOrientation="portrait"/>
 
+        <activity android:name=".mainpage.MainActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".result.ResultActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
